# dran

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  README.rst  fermi_lat_modal_redesign_preview.html  git_changelog.txt  main.py  pyproject.toml  requirements.txt  run_main.py  test.html
dran/: LICENCE.txt  README.md  main.py  requirements.txt
dran-build/: .buildinfo  caveats.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
dran-build/.doctrees/: caveats.doctree  index.doctree  installation.doctree
dran-build/.doctrees/api/calibration/: baseline.doctree  rfi.doctree
dran-build/.doctrees/api/fitting/: model_and_fit.doctree  peak.doctree
dran-build/.doctrees/api/interface/: cli.doctree  (+2 more)
dran-build/.doctrees/docs/: dran.calibration.atmosphere.doctree  dran.calibration.doctree  dran.calibration.planets.doctree  dran.calibration.planets.ephemeris.doctree  dran.calibration.predefs.doctree  dran.cli.doctree  dran.config.doctree  dran.doctree  dran.fits.doctree  dran.fitting.doctree  dran.gui.doctree  dran.gui.ui.doctree  dran.gui.ui_design.doctree  dran.pipelines.doctree  dran.storage.doctree  dran.utils.doctree  modules.doctree
dran-build/.doctrees/extras/: CHANGELOG.doctree
dran-build/.doctrees/tuts/: 2GHz_HydraA_tutorial.doctree  index.doctree  tut_sband.doctree  tut_xband.doctree
dran-build/_modules/: index.html
dran-build/_modules/dran/: main.html
dran-build/_sources/: caveats.rst
dran-build/_sources/docs/: dran.cli.rst  dran.fitting.rst  dran.gui.rst
dran-build/_sources/extras/: CHANGELOG.rst
dran-build/api/calibration/: baseline.html  rfi.html
dran-build/api/fitting/: model_and_fit.html  peak.html
dran-build/api/interface/: cli.html  gui.html  web.html
dran-build/api/reduction/: data_extraction_and_prep.html
dran-build/api/resources/: basics.html
dran-build/api/vis/: stat_anal_and_vis.html
dran-build/docs/: dran.calibration.atmosphere.html  dran.calibration.html  dran.calibration.planets.ephemeris.html  dran.calibration.planets.html  dran.calibration.predefs.html  dran.cli.html  dran.config.html  dran.fits.html  dran.fitting.html  dran.gui.html  dran.gui.ui.html  dran.gui.ui_design.html  dran.html  dran.pipelines.html  dran.storage.html  dran.utils.html  modules.html
dran-build/extras/: CHANGELOG.html
dran-build/tuts/: 2GHz_HydraA_tutorial.html  index.html  tut_sband.html  tut_xband.html
dran/src/: CHANGELOG.md  main.py
dran/src/calibration/: calibrate.py  resource_utils.py  row_accessors.py
dran/src/cli/: init_processes.py  parser.py
dran/src/config/: constants.py  logging.py  paths.py
dran/src/fits/: dispatcher.py  hdu_rules.py  lazy_reader.py  observation_extractor.py  path_resolver.py  processing_fit.py
dran/src/fitting/: baseline_correction.py  gaussian_fit.py  pipeline.py  plotting.py  rfi_cleaning.py  validation.py
dran/src/gui/: canvas_manager.py  main_gui_logic copy.py  secondary_canvas_manager.py
dran/src/header/: computed_columns.py  observed_keys.py
dran/src/obs/: __init__.py  populate.py
dran/src/pipelines/: docs_processing.py  fits_processing.py  gui_processing.py
dran/src/storage/: db_introspection.py  sqlite_connection.py  sqlite_repository.py
dran/src/utils/: frequency_utils.py  invalid_path_registry.py  paths.py
source/docs/: modules.rst
src/: README.rst  requirements.txt
src/calibration/: calibrate.py  errors.py  pointing.py  row_accessors.py  ta_corrections.py
src/calibration/atmosphere/: __init__.py  atmos_models.py  meteo_water_vapour.py
src/calibration/ephemeris/: jpl_horizons_table.py
src/calibration/flux/: dataframe_prep.py  flux_scale.py  pss.py  totals.py
src/calibration/planets/: planet_geometry.py  planet_jupiter_calibration.py
src/cli/: init_processes.py  parser.py
src/config/: constants.py  logging.py  paths.py
src/docs/: readme_first.txt  runMeToBuildDocs.py
src/docs/dran-build/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js  sphinx-reading-durations.json
src/docs/source/: conf.py  index.rst
src/dran/: AUTHORS.rst  CHANGELOG.md  LICENCE.txt  __init__.py  main.py
src/dran/calibration/: __init__.py  calibrate.py  pointing.py  resource_utils.py  row_accessors.py
src/dran/cli/: init_processes.py  parser.py
src/dran/config/: constants.py  logging.py  paths.py
src/dran/docs/: README.md  runMeToBuildDocs.py
src/dran/fits/: __init__.py  backends.py  computed_columns.py  dispatcher.py  init_fits_processing.py  labels.py  lazy_reader.py  observation_extractor.py  observed_keys.py  path_resolver.py  populate.py  processing_fit.py  schema.py  types.py
src/dran/fitting/: __init__.py  baseline_correction.py  config.py  locate_fitting_blocks.py  peak_fitting.py  pipeline.py  plot_qc.py  plotting.py  rfi_cleaning.py  spline_models.py
src/dran/gui/: main.py
src/dran/header/: labels.py  observed_keys.py
src/dran/obs/: populate.py  records.py
src/dran/pipelines/: analysis_processing.py  docs_processing.py  fits_processing.py  gui_processing.py  web_processing.py
src/dran/storage/: __init__.py  db_introspection.py  sqlite_connection.py  sqlite_repository.py  sqlite_schema.py
src/dran/utils/: config.py  frequency_utils.py  fs.py  invalid_path_registry.py  paths.py  port_utils.py  time_utils.py
src/fits/: directory_scanner.py  dispatcher.py  fits_util.py  observation_extractor.py  path_resolver.py  processing_fit.py
src/fitting/: baseline_correction.py  baseline_windows.py  models.py  paths.py  pipeline.py  plot_qc.py  plotting.py  rfi_cleaning.py  spline_models.py
src/gui/: main_gui_logic.py
src/header/: __init__.py  labels.py  schema.py
src/obs/: conversion.py  populate.py  records.py
src/pipelines/: analysis_processing.py  docs_processing.py  fits_processing.py  gui_processing.py  web_processing.py
src/source/: conf.py
src/storage/: __init__.py  db_introspection.py  sqlite_connection.py  sqlite_repository.py  sqlite_schema.py  sqlite_types.py
src/utils/: frequency_utils.py  fs.py  invalid_path_registry.py  paths.py
(+292 files in other folders)
